# hades_analysis_tree_converter

./: CMakeLists.txt
batch/: AgAg_1_23GeV.json  AgAg_1_58GeV.json  AuAu_1_23GeV.json  batch.sh  batch_botvina.sh  batch_botvina_run.sh  batch_run.sh
evtchara07/: EvtCharaLinkDef.h  HOWTO.txt  Makefile  hparticleevtcharaBK.cc  hparticleevtcharaBK.h
src/: .gitignore  AnalysisTreeHadesInterfaceLinkDef.h  CMakeLists.txt  HADES_constants.h  HTree_to_AT.cxx  HadesInterface.cxx  HadesInterface.h  detector_manager.h  event_manager.cc  event_manager.h  hades_event_reader.cc  hades_event_reader.h  hit_manager.h  main.cc  main.cxx  mdc_meta_matching.cc  mdc_meta_matching.h  mdc_tracks_manager.cc  mdc_tracks_manager.h  meta_hits_manager.cc  meta_hits_manager.h  mhwalldivider.h  module_manager.cc  reco_sim_matching.cc  reco_sim_matching.h  sim_event_manager.cc  sim_event_manager.h  sim_reco_match.cc  sim_reco_match.h  sim_track_manager.cc  sim_track_manager.h  sim_tracks_manager.cc  sim_tracks_manager.h  start_hits_manager.cc  start_hits_manager.h  track_manager.cc  track_manager.h  track_tof_match.cc  track_tof_match.h  tree_builder.cc  (+5 more)
src/experimental/: detector_manager.cc  detector_manager.h  event_manager.h  hit_manager.cc  hit_manager.h  main.cc  mhwalldivider.cc  tree_manager.cc  tree_manager.h  wall_hits_manager.cc  wall_hits_manager.h
src/geant_wall_converter/: analysis_tree_manager.cc  analysis_tree_manager.h  convert.cc  converting_manager.cc  converting_manager.h  geant_wall_hits_converter.cc  geant_wall_hits_converter.h  hades_tree_manager.cc  hades_tree_manager.h  wall_hits_filler.cc  wall_hits_filler.h
src/macro/: rootlogon.C  run_treemaker.C
src/param/: AgAg_1_23AGeV.root  AgAg_1_58AGeV.root  AuAu_1_23AGeV.root
src/simulation/: hades_event_reader.cc  hades_event_reader.h  main.cc  tree_manager.h
